Background image link edit

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(10, 10, 10);
-    background-image: url(./assets/GitHub\ Searcher.png);
+    background-image: url(./assets/GitHubSearcher.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
